<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/title_log_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/secret_diary"
        android:textColor="@color/dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/pin_log_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pin_log_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_pin"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:boxStrokeErrorColor="@color/red"
        app:cursorErrorColor="@color/red"
        app:errorIconDrawable="@null"
        app:hintTextColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pin_log_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/my_button"
        android:text="@string/log_in"
        android:textColor="@color/grey"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pin_log_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>